Wed Aug 14 12:37:23 2002  David Helder  <dhelder@umich.edu>
	
	* *: Release 1.1.5

	* src/iochannel.c (gnet_io_channel_write_async): Don't succeed
	   immediately if the buffer is length 0.  Also allow a write
	   from a non-NULL buffer of length 0.

Sat Aug 10 19:18:33 2002  David Helder  <dhelder@umich.edu>

	* examples/hash.c: Move hash example to examples.

	* tests/pack.c: Made this a proper automake automated test.
	* tests/unpack.c: "
	* tests/hash.c: "
	* examples/Makefile.am: Updated
	
	* tests/hash.c: Don't dump core on './hash'

	* tests/urlparse.c: Removed.  url_test covers this.

	* src/gnet.c (gnet_init): Added.  Call this at the beginning of
	    any Gnet program.  (This is really only required for
	    asynchronous DNS support when pthreads are available and GNet
	    is compiled with GLib 2.0.)
	* examples/*.c (main): Add call to gnet_init ().
	* tests/*.c (main): "

	* src/Makefile.am (libgnet_la_LDFLAGS): Link with GTHREAD_LIBS.

	* src/socks.c (gnet_socks_get_server): Add const
	* src/socks-private.c (socks_get_version): "

Mon Aug  5 16:54:55 2002  David Helder  <dhelder@umich.edu>

	* src/conn.h: Fix typo.
	* src/inetaddr.c (gnet_inetaddr_new_async_cancel): "

	* src/iochannel.c (_GNetIOChannelWriteAsyncState): Add in_upcall
	   flag so that state doesn't get deleted during the upcall.
	* src/iochannel.c (gnet_io_channel_write_async_cancel): Don't
	   delete state if in an upcall.  Only delete the buffer (if 
	   requested).
	* src/iochannel.c (write_async_cancel): Added this static function
	   to make all this a bit more clear.  Users call
	   gnet_io_channel_write_async_cancel(), but internally we call
	   this.
	* src/iochannel.c (write_async_cb): Set in_upcall during upcall.
	   Call write_async_cancel().
	* src/iochannel.c (write_async_timeout_cb): "

	* src/iochannel.c (_GNetIOChannelReadAsyncState): Basically did
	   the same thing as above for the read_async functions.
	* src/iochannel.c (gnet_io_channel_read_async_cancel): Ignore